--- a/examples/iam_auth/catalogValidationValues.json.template
+++ b/examples/iam_auth/catalogValidationValues.json.template
@@ -2,6 +2,6 @@
   "ibmcloud_api_key": $VALIDATION_APIKEY,
   "region": "us-south",
   "resource_tags": $TAGS,
-  "prefix": $PREFIX
+  "prefix": $PREFIX,
   "cis_id": $CIS_ID
 }
