fix: catalog onboarding failure

--- a/solutions/fully-configurable/catalogValidationValues.json.template
+++ b/solutions/fully-configurable/catalogValidationValues.json.template
@@ -2,6 +2,6 @@
   "ibmcloud_api_key": $VALIDATION_APIKEY,
   "existing_secrets_manager_crn": $SM_CRN,
   "prefix": $PREFIX,
-  "private_key_secrets_manager_secret_crn": $ACME_LETSENCRYPT_PRIVATE_KEY_SECRET_CRN,
-  "internet_services_crn": $CIS_INSTANCE_ID
+  "acme_letsencrypt_private_key": $ACME_KEY,
+  "internet_services_crn": $CIS_ID
 }
