--- a/solutions/fully-configurable/catalogValidationValues.json.template
+++ b/solutions/fully-configurable/catalogValidationValues.json.template
@@ -2,5 +2,6 @@
   "ibmcloud_api_key": $VALIDATION_APIKEY,
   "existing_secrets_manager_crn": $SM_CRN,
   "acme_letsencrypt_private_key": $ACME_KEY,
-  "internet_services_crn": $CIS_ID
+  "internet_services_crn": $CIS_ID,
+  "prefix": $PREFIX
 }
